
[workspace]
members = ["crates/p2p-raft", "crates/p2p-raft-memstore"]

resolver = "2"

[workspace.dependencies]

anyhow = "*"
derive_more = { version = "1", features = ["full"] }
futures = "*"
itertools = "*"
maplit = "*"
nanoid = "*"
parking_lot = "*"
rand = { version = "0.9" }
serde = "*"
tokio = { version = "1.0", features = ["full"] }
tracing = "*"
tracing-mutex = { version = "*", features = ["parkinglot"] }
tracing-subscriber = "*"

anyerror = { version = "*", features = ["anyhow"] }

openraft = { git = "https://github.com/maackle/openraft", branch = "adapt-v1-feature", features = [
  "type-alias",
] }
openraft-macros = { git = "https://github.com/maackle/openraft", branch = "adapt-v1-feature" }
openraft-memstore = { git = "https://github.com/maackle/openraft", branch = "adapt-v1-feature" }

p2p-raft-memstore = { path = "crates/p2p-raft-memstore" }
