
[workspace]
members = ["crates/p2p-raft", "crates/p2p-raft-memstore"]

resolver = "2"

[workspace.dependencies]

anyhow = "*"
derive_more = { version = "1", features = ["full"] }
futures = "*"
itertools = "*"
maplit = "*"
nanoid = "*"
parking_lot = "*"
rand = { version = "0.9" }
serde = "*"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

anyerror = { version = "*", features = ["anyhow"] }

openraft = { git = "https://github.com/databendlabs/openraft", default-features = false, features = [
  "tokio-rt",
  "type-alias",
] }
openraft-macros = { git = "https://github.com/databendlabs/openraft" }
openraft-memstore = { git = "https://github.com/databendlabs/openraft" }

p2p-raft-memstore = { path = "crates/p2p-raft-memstore" }

# [patch."https://github.com/databendlabs/openraft"]
# openraft = { path = "/home/michael/gitfork/openraft/openraft" }
# openraft-macros = { path = "/home/michael/gitfork/openraft/macros" }
# openraft-memstore = { path = "/home/michael/gitfork/openraft/stores/memstore" }
