[package]
name = "p2p-raft-memstore"
version = "0.1.0"
readme = "README.md"

edition = "2021"
authors = ["drdr xp <drdr.xp@gmail.com>"]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An example in-memory storage for `openraft`."
homepage = "https://github.com/databendlabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"

[dependencies]
openraft = { workspace = true, features = ["type-alias"] }

derive_more = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.0", default-features = false, features = ["sync"] }
tracing = { workspace = true }

[features]

serde = ["openraft/serde"]

[package.metadata.docs.rs]
all-features = true
