[package]
name = "p2p-raft"
version = "0.1.0"
edition = "2024"

[dependencies]
openraft = { workspace = true }
openraft-macros = { workspace = true }
openraft-memstore = { workspace = true }

derive_more = { workspace = true }
futures = { workspace = true }
maplit = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

memstore = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = ["testing"]
testing = ["memstore"]
