[package]
name = "p2p-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
openraft = { workspace = true }
openraft-macros = { workspace = true }
openraft-memstore = { workspace = true }

anyhow = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
nanoid = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

p2p-raft-memstore = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = ["testing"]

memstore = ["p2p-raft-memstore"]
testing = ["memstore"]
